tests/golden/err-unknown-tag/expected_error.txt
error: `Tag` に `.dvi` はありません
 --> ./_.clum:3:7
  |
3 |     h .dvi
  |       ^^^^ もしかして `.div` ですか？
